--- a/qr-code-component-main/css/styles.css
+++ b/qr-code-component-main/css/styles.css
@@ -1,43 +1,49 @@
-.attribution {
-  margin-top: 20px;
-  font-size: 11px;
-  text-align: center;
-}
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
 body {
+  box-sizing: border-box;
   background-color: hsl(212, 45%, 89%);
   font-family: "Outfit";
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 body .wrapper {
   background-color: hsl(0, 0%, 100%);
   border-radius: 15px;
   width: 280px;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 body .wrapper .card .qr-code img {
-  width: 250px;
+  width: 90%;
   border-radius: 15px;
   margin: 15px;
+  margin-bottom: 0;
 }
 body .wrapper .card .card-text {
-  margin: 20px;
+  margin: 0 15px 15px 15px;
   text-align: center;
+  padding: 10px;
 }
 body .wrapper .card .card-text .card-heading {
-  font-size: large;
+  margin-top: 0;
+  font-size: 20px;
   font-weight: 700;
   color: hsl(218, 44%, 22%);
 }
 body .wrapper .card .card-text .card-description {
-  font-size: 15px;
+  margin: 0px 5px;
+  font-size: 13px;
   font-weight: 400;
   color: hsl(220, 15%, 55%);
+}
+body .attribution {
+  margin-top: 20px;
+  font-size: 11px;
+  text-align: center;
+}
+body .attribution a {
+  color: hsl(228, 45%, 44%);
 }/*# sourceMappingURL=styles.css.map */
